<resources>
    <string name="app_name">LIG-Aikuma</string>
    <string name="record">Recording</string>
    <string name="cancel">Cancel</string>
    <string name="speaker_name">Name</string>
    <string name="metadata_mother_tongue">Mother tongue</string>
    <string name="select_from_list">Select from list</string>
    <string name="spoken_languages">Spoken languages</string>
    <string name="second_language">Second language</string>
    <string name="more_languages">More languages</string>
    <string name="extra_information">Extra information</string>
    <string name="region_origin">Region of origin</string>
    <string name="region_origin_edit">Type in your region of origin</string>
    <string name="personal_information">Personal information</string>
    <string name="age">Birth year</string>
    <string name="gender">Gender</string>
    <string name="speaker_name_edit">Type in your name</string>
    <string name="button_ok">OK</string>
    <string name="respeak">Respeaking</string>
    <string name="recording_metadata">Reminder of the recording Metadata</string>
    <string name="respeak_meta_record_lang">Language of the recording</string>
    <string name="respeak_meta_extra_lang">Extra spoken languages</string>
    <string name="respeak_meta_spkr_info">Speaker details</string>
    <string name="respeaking_metadata">Respeaking metadata</string>
    <string name="respeaking_lang">Respeaking language</string>
    <string name="translating_lang">Translating language</string>
    <string name="speaker_info">Speaker Information</string>
    <string name="tradBtn">Translating</string>
    <string name="elicitBtn">Elicitation</string>
    <string name="welcome">Welcome on Lig-Aikuma</string>
    <string name="selectaMode">Please, select a mode below</string>
    <string name="respeak_previous_segment">Latest Segment</string>
    <string name="respeakmode">Respeaking mode</string>
    <string name="selectanImportType">Please, select the audio file to import.</string>
    <string name="elicitationMode">Elicitation mode</string>
    <string name="selectanElicitMode">Please, select an elicitation type below.</string>
    <string name="elicitText">Elicitation By Text</string>
    <string name="elicitImage">Elicitation By Image</string>
    <string name="elicitVideo">Elicitation By Video</string>
    <string name="goBack"> Back</string>
    <string name="recordingLanguage">Language of\nthe recording</string>
    <string name="RecordingMetadataTitle">Informations about the speaker</string>
    <string name="less_languages">Less languages</string>
    <string name="translatemode">Translating Mode</string>
    <string name="checkBtn">Check</string>
    <string name="checkMode">Check mode</string>
    <string name="selectaCheckMode">Please, select a verification type below.</string>
    <string name="checkVariant">Word Check Variants</string>
    <string name="checkTranscript">Transcription Check</string>
    <string name="mexico">Ex : Mexico</string>
    <string name="note">Note</string>
    <string name="other_language">Other language</string>
    <string name="please_listen_the_audio_and_check_the_box_if_the_transcription_corresponds">Please, listen the audio and check the box if the transcription corresponds.</string>
    <string name="check_transcription_mode">Check transcription mode</string>
    <string name="please_read_the_bold_line_and_check_the_box_if_the_word_is_a_variant">Please, read the bold line and check the box if the word is a variant.</string>
    <string name="check_variant_mode">Check variant mode</string>
    <string name="please_look_at_this_picture">Please, look at this picture</string>
    <string name="please_read_the_bold_line">Please, read the bold line.</string>
    <string name="please_watch_the_video">Please, watch the video</string>
    <string name="new_recording">New recording</string>
    <string name="translate_metadata">Translating metadata</string>
    <string name="unspecified">N/C</string>
    <string name="unspecified_tab">Unspecified</string>
    <string name="elicitation_video">Elicitation video</string>
    <string name="elicitation_text">Elicitation text</string>
    <string name="elicitation_image">Elicitation image</string>
    <string name="new_segment">New Segment</string>
    <string name="original_segment">Original Segment</string>
    <string name="import_word_with_variant_text_file">Import word with variant text file</string>
    <string name="import_transcription_file">Import transcription file</string>
    <string name="yes">Yes</string>
    <string name="no_but_keep_files">No, but keep files</string>
    <string name="no_and_erase_files">No, and erase files</string>
    <string name="the_audio_file_is_unobtainable_please_proceed_to_the_next_transcript">The corresponding audio file is unobtainable. Please proceed to the next transcript.</string>
    <string name="something_weird_happened">Something weird happened.</string>
    <string name="an_error_occurred_the_transcript_file_could_not_be_found">An error occurred, the transcript file could not be found.</string>
    <string name="no_more_transcript_to_display_file_saved_in">No more transcript to display. File saved in </string>
    <string name="going_to_next_transcript">Going to next transcript…</string>
    <string name="file_saved_in">File saved in</string>
    <string name="nothing_to_save">Nothing to save.</string>
    <string name="a_session_is_in_progress_do_you_want_to_save_the_progression">A session is in progress. Do you want to save the progression?</string>
    <string name="no">No</string>
    <string name="an_error_occurred_the_text_file_could_not_be_found">An error occurred, the text file could not be found.</string>
    <string name="something_weird_happened_it_might_be_that_the_text_file_was_empty">Something weird happened. It might be that the text file was empty.</string>
    <string name="the_session_has_been_saved">The session has been saved.</string>
    <string name="no_more_words_to_display_file_saved_in">No more words to display. File saved in</string>
    <string name="error_setting_up_microphone">Error setting up microphone.</string>
    <string name="discard_udio">Discard Audio?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="failed_to_write_the_recording_metadata">Failed to write the Recording metadata:\t</string>
    <string name="please_fill_in_the_details_related_of_the_respeaking_speaker">Please, fill in the details related of the respeaking speaker.</string>
    <string name="an_error_occurred_the_resource_could_not_be_found">An error occurred, the resource file could not be found.</string>
    <string name="something_weird_happened_it_might_be_that_the_resource_file_was_empty">Something weird happened. It might be that the resource file was empty.</string>
    <string name="video">Video</string>
    <string name="phrase">Phrase</string>
    <string name="image">Image</string>
    <string name="problem_with_text_output_file_linker">Problem with output file linker.</string>
    <string name="going_next">Going next…</string>
    <string name="an_error_occurred_with_the_microphone_please_try_again">An error occurred with the microphone. Please, try again.</string>
    <string name="progression_saved">Progression saved.</string>
    <string name="a_session_is_progress_do_you_want_to_save_the_progression">A session is in progress. Do you want to save the progression?</string>
    <string name="there_has_been_an_error_in_the_creation_of_the_audio_file_which_prevents_it_from_being_read">There has been an error in the creation of the audio file which prevents it from being read.</string>
    <string name="please_fill_in_the_details_of_the_imported_recording">Please, fill in the details of the imported recording.</string>
    <string name="you_can_t_delete_the_language_of_the_recording_the_mother_tongue_or_the_second_language_of_the_speaker">You can\'t delete the language of the recording, the mother tongue or the second language of the speaker.</string>
    <string name="input_birth_year_is_implausible_interval">Input birth year is implausible… interval [</string>
    <string name="ok">OK</string>
    <string name="warning_age_is_incorrect">Warning: Age is incorrect.</string>
    <string name="the_recording_language_is_empty_please_fill_it">The recording language is empty, please fill in.</string>
    <string name="the_name_of_the_speaker_is_empty_please_fill_it">The name of the speaker is empty, please fill in.</string>
    <string name="continue_">Continue</string>
    <string name="failed_to_import_the_recording">Failed to import the recording:\t</string>
    <string name="failed_to_retrieve_language_from_selection">Failed to retrieve language from selection</string>
    <string name="in_translation_mode_the_respeaking_language_should_be_different_from_the_original_language">In translation mode, the respeaking language should be different from the original language.</string>
    <string name="error_failed_to_load_the_recording_please_try_again">Error: failed to load the recording. Please try again.</string>
    <string name="you_can_t_delete_the_of_the_respeaking_the_mother_tongue_or_the_second_language_of_the_speaker">You can\'t delete the language of the respeaking, the mother tongue or the second language of the speaker.</string>
    <string name="you_can_t_delete_the_of_the_translating_the_mother_tongue_or_the_second_language_of_the_speaker">You can\'t delete the language of the translating, the mother tongue or the second language of the speaker.</string>
    <string name="please_fill_the_respeaking_language_field">Please, fill in the respeaking language field.</string>
    <string name="please_fill_the_translating_language_field">Please, fill in the translating language field.</string>
    <string name="please_fill_the_name_of_the_speaker">Please, fill in the name of the speaker.</string>
    <string name="failed_to_import_the_recording_">Failed to import the recording.</string>
    <string name="there_has_been_an_error_stopping_the_microphone">There has been an error stopping the microphone.</string>
    <string name="there_has_been_an_error_writing_the_mapping_between_original_and_respeaking_to_file">There has been an error writing the mapping between original and respeaking to file</string>
    <string name="respeaking_saved_into_the_file">Respeaking saved into the file: </string>
    <string name="translation_saved_into_the_file">Translation saved into the file: </string>
    <string name="failed_to_write_the_respoken_recording_metadata">Failed to write the respoken recording metadata:\\t</string>
    <string name="a_session_is_in_progress_do_you_want_save_the_progression">A session is in progress. Do you want to save the progression?</string>
    <string name="error_when_saving_the_respeaking_please_try_again">Error when saving the respeaking: please try again.</string>
    <string name="problem_when_cancelling_the_segment">Problem when cancelling the segment.</string>
    <string name="back_to_the_initial_respoken_segment">Back to the initial respoken segment…</string>
    <string name="recording">Recording…</string>
    <string name="problem_with_microphone_unable_to_stop_it">Problem with microphone: unable to stop it</string>
    <string name="problem_when_saving_the_new_segment">Problem when saving the new segment.</string>
    <string name="session_and_files_erased">Session and files erased.</string>
    <string name="a_session_has_been_saved_would_you_like_to_retrieve_it">A session has been saved, would you like to retrieve it?</string>
    <string name="mode">mode</string>
    <string name="submode">submode</string>
    <string name="date">date</string>
    <string name="import_speaker_profile">Import a speaker profile</string>
    <string name="select_a_file_from_the_list_below">Select a file from the list below.</string>
</resources>