<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:weightSum="1">

	<TableLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin">

		<!-- Back button -->
		<GridLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="left">

			<Button
				android:id="@+id/btn_goBack"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_marginBottom="10dp"
				android:layout_marginTop="10dp"
				android:drawableLeft="@drawable/ic_undo_black_24dp"
				android:onClick="onBackPressed"
				android:text="@string/goBack"
				android:textColor="#D32F2F"/>
		</GridLayout>

		<TextView
			android:id="@+id/respeaking_title"
			style="@style/MainTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="20dp"
			android:text="@string/respeakmode"/>

		<View
			android:id="@+id/separator"
			android:layout_width="match_parent"
			android:layout_height="0.2dp"
			android:layout_marginBottom="30dp"
			android:background="@android:color/darker_gray"
			android:visibility="visible"/>

		<TextView
			android:id="@+id/respeaktextView2"
			style="@style/SecondTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/selectanImportType"/>
	</TableLayout>

	<TextView
		android:id="@+id/path_view_respeak"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:layout_marginLeft="20dp"
		android:layout_marginTop="10dp"
		android:textColor="@color/grid_line"
		android:textSize="20sp"/>

	<ListView
		android:id="@+id/search_file_list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"/>

	<ImageButton
		android:id="@+id/search_back_folder"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:onClick="onBackFolderClick"
		android:src="@drawable/ic_back_folder"
		android:layout_weight="1"/>

</LinearLayout>